# assignment-digital-mr

./: README.md  foo.py  original.ipynb  original_editted_Ahmad.ipynb  pyproject.toml
