[tool.poetry]
name = "test"
version = "0.1.0"
description = "Data science internship"
authors = ["Paul Hounnaklang <phounnaklang@digital-mr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.1.post1"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
